feat(capstone): checkout load script, JVM vs native evidence in ARCHITECTURE (discipline 9)
Co-authored-by: Cursor <cursoragent@cursor.com>